Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="es" data-bs-theme="dark">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHFYSC9VXM"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-ZHFYSC9VXM');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FiesTop</title>
@@ -69,7 +79,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" alt="..."></a> 
+                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">1.000 cubiertos desechables de plástico, paquete variado</h5>
                         <h3 class="card-title">$558.03</h3>
@@ -82,7 +92,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" alt="..."></a> 
+                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">1.000 cubiertos desechables de plástico, paquete variado</h5>
                         <h3 class="card-title">$558.03</h3>
@@ -95,7 +105,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" alt="..."></a> 
+                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">1.000 cubiertos desechables de plástico, paquete variado</h5>
                         <h3 class="card-title">$558.03</h3>
@@ -115,8 +125,10 @@
     </section>
 
     <footer>
-        <p style="text-align: center;">&copy; 2023 Mi Tienda en Línea <a href="https://www.facebook.com/people/FiesTop/100092594490737/"><img src="img/fb.png" class="card-img-top" alt="..." style="width: 30px;" ></a> </p>
-        
+        <p style="text-align: center;">&copy; 2023 Mi Tienda en Línea <a
+                href="https://www.facebook.com/people/FiesTop/100092594490737/"><img src="img/fb.png"
+                    class="card-img-top" alt="..." style="width: 30px;"></a> </p>
+
     </footer>
 </body>
 
