--- a/index.html
+++ b/index.html
@@ -92,26 +92,103 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" alt="..."></a>
+                    <a href="product.html"><img src="img/FiestaNiña.jpeg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
-                        <h5 class="card-title">1.000 cubiertos desechables de plástico, paquete variado</h5>
-                        <h3 class="card-title">$558.03</h3>
-                        <p class="card-text">Los cubiertos de plástico blanco a granel de 1000 piezas incluyen 334,
-                            tenedores,
-                            333 cuchillos, 333 cucharas de sopa...</p>
+                        <h5 class="card-title">6 Piezas, Sombrero De Papel De Unicornio Arcoíris</h5>
+                        <h3 class="card-title">$49.99</h3>
+                        <p class="card-text">6 Piezas, Sombrero De Papel De Unicornio Arcoíris, 
+                            Suministros De Fiesta De Cumpleaños Para Niña Y Niño...</p>
                         <a href="product.html" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" alt="..."></a>
+                    <a href="product.html"><img src="img/CoronaC.jpeg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
-                        <h5 class="card-title">1.000 cubiertos desechables de plástico, paquete variado</h5>
-                        <h3 class="card-title">$558.03</h3>
-                        <p class="card-text">Los cubiertos de plástico blanco a granel de 1000 piezas incluyen 334,
-                            tenedores,
-                            333 cuchillos, 333 cucharas de sopa...</p>
+                        <h5 class="card-title">15 Piezas, Coronas De Feliz Cumpleaños</h5>
+                        <h3 class="card-title">$92.29</h3>
+                        <p class="card-text">15 Piezas, Coronas De Feliz Cumpleaños, 
+                            Coronas De Sombrero De Cumpleaños De Papel Para Regalos De Cumpleaños 
+                            En El Aula, Fiestas, Sombreros...</p>
+                        <a href="product.html" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-light mb-3">
+                    <a href="product.html"><img src="img/HaciendaReal.jpg" class="card-img-top" alt="..."></a>
+                    <div class="card-body">
+                        <h5 class="card-title">Salón Real de Haciendas</h5>
+                        <h3 class="card-title">$10,000</h3>
+                        <p class="card-text">El salón perfecto para todo tipo de eventos...</p>
+                        <a href="product.html" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-light mb-3">
+                    <a href="product.html"><img src="img/CasaV.jpeg" class="card-img-top" alt="..."></a>
+                    <div class="card-body">
+                        <h5 class="card-title">Casa Victoria</h5>
+                        <h3 class="card-title">$45,000</h3>
+                        <p class="card-text">15 Piezas, Coronas De Feliz Cumpleaños, Coronas De Sombrero De Cumpleaños De Papel Para Regalos De Cumpleaños En El Aula, Fiestas, Sombreros, Suministros Diarios Para Fiestas...</p>
+                        <a href="product.html" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-light mb-3">
+                    <a href="product.html"><img src="img/SonidoB.jpeg" class="card-img-top" alt="..."></a>
+                    <div class="card-body">
+                        <h5 class="card-title">Sonido Boom</h5>
+                        <h3 class="card-title">$15,000</h3>
+                        <p class="card-text">Luz, Sonido, todo lo esencial para que tu fiesta este en ambiente...</p>
+                        <a href="product.html" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-light mb-3">
+                    <a href="product.html"><img src="img/ElementsAGS.jpg" class="card-img-top" alt="..."></a>
+                    <div class="card-body">
+                        <h5 class="card-title">Elements</h5>
+                        <h3 class="card-title">$18,500.99</h3>
+                        <p class="card-text">CONÓCENOS
+                            Somos una empresa hidrocálida con más de una década dedicada a la producción de eventos corporativos y sociales, generamos un excelente ambiente, divertido y animado...</p>
+                        <a href="product.html" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-light mb-3">
+                    <a href="product.html"><img src="https://www.elglobo.com.mx/cdn/shop/products/49523-1_600x.jpg?v=1618602727" class="card-img-top" alt="..."></a>
+                    <div class="card-body">
+                        <h5 class="card-title">4 Chocolates Individual</h5>
+                        <h3 class="card-title">$49.00</h3>
+                        <p class="card-text">Pan de chocolate tipo brownie relleno de mousse de chocolate amargo, chocolate de leche y chocolate blanco. Decorado con glasé blanco y obscuro...</p>
+                        <a href="product.html" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-light mb-3">
+                    <a href="product.html"><img src="https://www.elglobo.com.mx/cdn/shop/products/27543-1_600x.jpg?v=1618602845" class="card-img-top" alt="..."></a>
+                    <div class="card-body">
+                        <h5 class="card-title">Amandes de Chocolate</h5>
+                        <h3 class="card-title">$398.00</h3>
+                        <p class="card-text">Pastel en forma de rosca elaborado con helado sabor a chocolate con almendra y relleno de variegato noisette. Decorado con rocio y glasé de chocolate, montado sobre un bizcocho sabor chocolate embebido en jarabe marrasquino...</p>
+                        <a href="product.html" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-light mb-3">
+                    <a href="product.html"><img src="https://www.elglobo.com.mx/cdn/shop/products/41153-1_600x.jpg?v=1618602873" class="card-img-top" alt="..."></a>
+                    <div class="card-body">
+                        <h5 class="card-title">Biscocho Miniatura</h5>
+                        <h3 class="card-title">$198.00</h3>
+                        <p class="card-text">Charola con deliciosa mezcla de panqués y garibaldis tamaño miniatura...</p>
                         <a href="product.html" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
