--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="img/Fisestoplogo.png" height="40px"></a>
+                <a class="navbar-brand" href="index.html"><img src="img/Fisestoplogo.png" height="40px" alt="Logo oficial de FiesTop"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -79,7 +79,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" alt="..."></a>
+                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" alt="1000 cubiertos variados"></a>
                     <div class="card-body">
                         <h5 class="card-title">1.000 cubiertos desechables de plástico, paquete variado</h5>
                         <h3 class="card-title">$558.03</h3>
@@ -92,7 +92,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/FiestaNiña.jpeg" class="card-img-top" alt="..."></a>
+                    <a href="product.html"><img src="img/FiestaNiña.jpeg" class="card-img-top" alt="Sombreros de papel de unicornio"></a>
                     <div class="card-body">
                         <h5 class="card-title">6 Piezas, Sombrero De Papel De Unicornio Arcoíris</h5>
                         <h3 class="card-title">$49.99</h3>
@@ -104,7 +104,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/CoronaC.jpeg" class="card-img-top" alt="..."></a>
+                    <a href="product.html"><img src="img/CoronaC.jpeg" class="card-img-top" alt="Corona de papel con decoración de pastel de cunpleaños"></a>
                     <div class="card-body">
                         <h5 class="card-title">15 Piezas, Coronas De Feliz Cumpleaños</h5>
                         <h3 class="card-title">$92.29</h3>
@@ -117,7 +117,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/HaciendaReal.jpg" class="card-img-top" alt="..."></a>
+                    <a href="product.html"><img src="img/HaciendaReal.jpg" class="card-img-top" alt="Salón de eventos Real de Haciendas"></a>
                     <div class="card-body">
                         <h5 class="card-title">Salón Real de Haciendas</h5>
                         <h3 class="card-title">$10,000</h3>
@@ -128,7 +128,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/CasaV.jpeg" class="card-img-top" alt="..."></a>
+                    <a href="product.html"><img src="img/CasaV.jpeg" class="card-img-top" alt="Salón Casa Victoria"></a>
                     <div class="card-body">
                         <h5 class="card-title">Casa Victoria</h5>
                         <h3 class="card-title">$45,000</h3>
@@ -139,7 +139,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/SonidoB.jpeg" class="card-img-top" alt="..."></a>
+                    <a href="product.html"><img src="img/SonidoB.jpeg" class="card-img-top" alt="Evento con sonido y luces Boom"></a>
                     <div class="card-body">
                         <h5 class="card-title">Sonido Boom</h5>
                         <h3 class="card-title">$15,000</h3>
