Added cookies pop-up

--- a/index.html
+++ b/index.html
@@ -72,8 +72,17 @@
         </nav>
     </header>
 
-    <img src="img/aaaa.png" class="rounded mx-auto d-block" alt="" style="height: 500px;">
+    <img src="img/aaaa.png" class="rounded mx-auto d-block" alt="Banner de FiesTop" style="height: 500px;">
 
+    <!-- Cookies -->
+    <div id="cookies" style="position: fixed; left: 0px; right: 0px; bottom: 0px; width: 100%; min-height: 40px; background: #cfcfcf; color: #184b6a; z-index: 99999;">
+        <div style="width: 100%; position: absolute; padding-left: 5px; font-family: verdana; font-size: 12px; top: 30%; text-align: center;">
+            Usamos cookies propias y de terceros para ayudarte en tu navegación. Si continúas navegando consideramos que aceptas el uso de cookies.
+            <a style="padding: 6px; background: #4682B4; text-decoration: none; color: #fff; border-radius: 5px;"><b>OK</b></a>
+            <a style="padding-left: 5px; text-decoration: none; color: #636363;" href="#" target="_blank" rel="nofollow"><u>Más información</u></a>
+        </div>
+    </div>
+    
     <section class="destacados">
         <h2>Productos Destacados</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
