Removed link to product.html in imgs

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/FiestaNiña.jpeg" class="card-img-top" alt="Sombreros de papel de unicornio"></a>
+                    <a href="#"><img src="img/FiestaNiña.jpeg" class="card-img-top" alt="Sombreros de papel de unicornio"></a>
                     <div class="card-body">
                         <h5 class="card-title">6 Piezas, Sombrero De Papel De Unicornio Arcoíris</h5>
                         <h3 class="card-title">$49.99</h3>
@@ -113,7 +113,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/CoronaC.jpeg" class="card-img-top" alt="Corona de papel con decoración de pastel de cunpleaños"></a>
+                    <a href="#"><img src="img/CoronaC.jpeg" class="card-img-top" alt="Corona de papel con decoración de pastel de cunpleaños"></a>
                     <div class="card-body">
                         <h5 class="card-title">15 Piezas, Coronas De Feliz Cumpleaños</h5>
                         <h3 class="card-title">$92.29</h3>
@@ -126,7 +126,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/HaciendaReal.jpg" class="card-img-top" alt="Salón de eventos Real de Haciendas"></a>
+                    <a href="#"><img src="img/HaciendaReal.jpg" class="card-img-top" alt="Salón de eventos Real de Haciendas"></a>
                     <div class="card-body">
                         <h5 class="card-title">Salón Real de Haciendas</h5>
                         <h3 class="card-title">$10,000</h3>
@@ -137,7 +137,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/CasaV.jpeg" class="card-img-top" alt="Salón Casa Victoria"></a>
+                    <a href="#"><img src="img/CasaV.jpeg" class="card-img-top" alt="Salón Casa Victoria"></a>
                     <div class="card-body">
                         <h5 class="card-title">Casa Victoria</h5>
                         <h3 class="card-title">$45,000</h3>
@@ -148,7 +148,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/SonidoB.jpeg" class="card-img-top" alt="Evento con sonido y luces Boom"></a>
+                    <a href="#"><img src="img/SonidoB.jpeg" class="card-img-top" alt="Evento con sonido y luces Boom"></a>
                     <div class="card-body">
                         <h5 class="card-title">Sonido Boom</h5>
                         <h3 class="card-title">$15,000</h3>
@@ -159,7 +159,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/ElementsAGS.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="img/ElementsAGS.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">Elements</h5>
                         <h3 class="card-title">$18,500.99</h3>
@@ -171,7 +171,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="https://www.elglobo.com.mx/cdn/shop/products/49523-1_600x.jpg?v=1618602727" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="https://www.elglobo.com.mx/cdn/shop/products/49523-1_600x.jpg?v=1618602727" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">4 Chocolates Individual</h5>
                         <h3 class="card-title">$49.00</h3>
@@ -182,7 +182,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="https://www.elglobo.com.mx/cdn/shop/products/27543-1_600x.jpg?v=1618602845" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="https://www.elglobo.com.mx/cdn/shop/products/27543-1_600x.jpg?v=1618602845" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">Amandes de Chocolate</h5>
                         <h3 class="card-title">$398.00</h3>
@@ -193,7 +193,7 @@
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="https://www.elglobo.com.mx/cdn/shop/products/41153-1_600x.jpg?v=1618602873" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="https://www.elglobo.com.mx/cdn/shop/products/41153-1_600x.jpg?v=1618602873" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">Biscocho Miniatura</h5>
                         <h3 class="card-title">$198.00</h3>
