Empezando a modificar las imagenes

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
         </nav>
     </header>
 
-    <img src="img/aaaa.png" class="rounded mx-auto d-block" alt="Banner de FiesTop" style="height: 500px;">
+    <img src="img/Banner.png" class="rounded mx-auto d-block" alt="Banner de FiesTop" style="height: 500px;">
     
     <section class="destacados">
         <h2>Productos Destacados</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" alt="1000 cubiertos variados"></a>
+                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" title="Cubiertos Plasticos" alt="1000 cubiertos variados"></a>
                     <div class="card-body">
                         <h5 class="card-title">1.000 cubiertos desechables de plástico, paquete variado</h5>
                         <h3 class="card-title">$558.03</h3>
