--- a/product.html
+++ b/product.html
@@ -57,6 +57,32 @@
       font-size: 20px;
       font-weight: bold;
     }
+    .rating {
+      unicode-bidi: bidi-override;
+      direction: rtl;
+      font-size: 25px;
+  }
+
+  .rating > span {
+      display: inline-block;
+      position: relative;
+      width: 1.1em;
+      cursor: pointer;
+  }
+
+  .rating > span:hover:before,
+  .rating > span:hover ~ span:before {
+      content: "\2605";
+      position: absolute;
+      color: gold;
+  }
+
+  .comment {
+      margin-bottom: 15px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+  }
   </style>
 </head>
 
@@ -115,9 +141,42 @@
         <p id="product-brand"></p>
         <button type="button" class="btn btn-primary" onclick="addToCart()">Agregar al carrito</button>
         <p id="cart-message"></p>
+        <div>
+          <h2>Calificación del Producto</h2>
+      
+          <!-- Sección de calificación -->
+          <div class="rating">
+              <span>&#9734;</span>
+              <span>&#9734;</span>
+              <span>&#9734;</span>
+              <span>&#9734;</span>
+              <span>&#9734;</span>
+          </div>
+      
+          <!-- Mensaje para mostrar la calificación seleccionada -->
+          <p>Calificación actual:<br><span id="selectedRating">0</span></p>
+      </div>
       </div>
     </div>
+    <div id="comment-section">
+      <h2>Sección de Comentarios</h2>
+  
+      <!-- Formulario para agregar comentarios -->
+      <form id="comment-form">
+          <label for="name">Nombre:</label>
+          <input type="text" id="name" required><br>
+  
+          <label for="comment">Comentario:</label><br>
+          <textarea id="comment" rows="4" cols="100" required></textarea><br>
+  
+          <button type="button" onclick="addComment()">Agregar Comentario</button>
+      </form>
+  
+      <!-- Lista de comentarios -->
+      <div id="comment-list"></div>
   </div>
+  </div>
+  
 
   <script>
     function addToCart() {
@@ -156,6 +215,40 @@
         });
     });
   </script>
+  <script>
+    // Función para agregar comentarios
+    function addComment() {
+        var name = document.getElementById('name').value;
+        var commentText = document.getElementById('comment').value;
+
+        if (name && commentText) {
+            var commentList = document.getElementById('comment-list');
+            var commentDiv = document.createElement('div');
+            commentDiv.className = 'comment';
+            commentDiv.innerHTML = '<strong>' + name + ':</strong> ' + commentText;
+            commentList.appendChild(commentDiv);
+
+            // Limpiar el formulario
+            document.getElementById('name').value = '';
+            document.getElementById('comment').value = '';
+        } else {
+            alert('Por favor, complete todos los campos.');
+        }
+    }
+</script>
+<script>
+  // Función para manejar la calificación seleccionada
+  document.addEventListener('DOMContentLoaded', function () {
+    var stars = document.querySelectorAll('.rating > span');
+    var ratingValue = document.getElementById('selectedRating');
+
+    stars.forEach(function (star, index) {
+        star.addEventListener('click', function () {
+            ratingValue.textContent = index + 1;
+        });
+    });
+});
+</script>
 
 </body>
 
