--- a/product.html
+++ b/product.html
@@ -2,6 +2,7 @@
 <html lang="es" data-bs-theme="auto">
 
 <head>
+  <link rel="icon" href="img/Fisestoplogo.png" type="image/x-icon">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHFYSC9VXM"></script>
   <script>
