--- a/index.html
+++ b/index.html
@@ -389,10 +389,10 @@
 
     <!-- Cookie Banner -->
     <div id="cb-cookie-banner" class="alert alert-dark text-center mb-0" role="alert">
-      &#x1F36A; Este sitio utiliza cookies para mejorar tu experiencia.
+      &#x1F36A; Este sitio utiliza cookies para mejorar tu experiencia :)
       <a href="https://www.cookiesandyou.com/" target="blank">Aprende más</a>
       <button type="button" class="btn btn-primary btn-sm ms-3" onclick="window.cb_hideCookieBanner()">
-        I Got It
+        Entendido
       </button>
     </div>
     <!-- End of Cookie Banner -->
