--- a/index.html
+++ b/index.html
@@ -212,39 +212,27 @@
         <div class="carrusel">
             <div class="product" id="product_0">
                 <a href="product.html"> <img src="img/Cubiertos.jpg" width="195" height="160"
-                        title="Cubiertos Plasticos" alt="1000 cubiertos variados" /></a>
-                <h5>1.000 cubiertos desechables ...</h5>
-                <p>$ 558.03</p>
+                        title="Cubiertos Plasticos - $558.03" alt="1000 cubiertos variados" /></a>
             </div>
             <div class="product" id="product_1">
                 <img src="img/SonidoB.jpeg" width="260" height="160" alt="Evento con sonido y luces Boom"
-                    title="Evento con sonido y luces Boom" />
-                <h5>Sonido Boom</h5>
-                <p>$ 15,000</p>
+                    title="Evento con sonido y luces Boom - $15,000" />
             </div>
             <div class="product" id="product_2">
                 <img src="img/HaciendaReal.jpg" width="260" height="160" alt="Salón de eventos Real de Haciendas"
-                    title="Salón de eventos Real de Haciendas" />
-                <h5>Salón Real de Haciendas</h5>
-                <p>$ 10,000</p>
+                    title="Salón de eventos Real de Haciendas - $10,000" />
             </div>
             <div class="product" id="product_3">
                 <img src="img/FiestaNiña.jpeg" width="260" height="160" alt="Sombreros de papel de unicornio"
-                    title="Sombreros de papel de unicornio" />
-                <h5>6 Piezas, Sombrero De ...</h5>
-                <p>$ 49.99</p>
+                    title="Sombreros de papel de unicornio - $49.99" />
             </div>
             <div class="product" id="product_4">
                 <img src="img/ElementsAGS.jpg" width="260" height="160" alt="Excelente ambiente para los eventos"
-                    title="Excelente ambiente" />
-                <h5>Elements</h5>
-                <p>$ 18,500.99</p>
+                    title="Excelente ambiente - $18,500" />
             </div>
             <div class="product" id="product_5">
-                <img src="img/CoronaC.jpeg" width="260" height="160" title="Corona de papel"
+                <img src="img/CoronaC.jpeg" width="260" height="160" title="Corona de papel - $92.29"
                     alt="Corona de papel con decoración de pastel de cunpleaños" />
-                <h5>15 Piezas, Coronas De ...</h5>
-                <p>$ 92.29</p>
             </div>
         </div>
     </div>
