Modificacion (tamaño  del carrusel)

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         #carrusel {
             float: left;
-            width: 1450px;
+            width: 1300px;
             overflow: hidden;
             height: 150px;
             position: relative;
@@ -200,8 +200,7 @@
         </nav>
     </header>
     <br>
-    <div>
-        
+    <div><br>
         <img src="img/Banner.png" class="rounded mx-auto d-block" alt="Banner de FiesTop" title="Banner de FiesTop"
             style="height: 500px; ">
     <div id="carrusel">
