--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+
+    <!-- Cookies JS -->
+    <script async src="./src/cookie-banner.js"></script>
+    
     <script>
         var current = 0;
         var imagenes = new Array();
@@ -382,40 +386,8 @@
     </section>
 
     <!-- Cookie Banner -->
-    <script>
-        /* Javascript to show and hide cookie banner using localstorage */
-        /* Shows the Cookie banner */
-        function showCookieBanner() {
-            let cookieBanner = document.getElementById("cb-cookie-banner");
-            cookieBanner.style.display = "block";
-        }
-
-        /* Hides the Cookie banner and saves the value to localstorage */
-        function hideCookieBanner() {
-            localStorage.setItem("cb_isCookieAccepted", "yes");
-            let cookieBanner = document.getElementById("cb-cookie-banner");
-            cookieBanner.style.display = "none";
-        }
-
-        /* Checks the localstorage and shows Cookie banner based on it. */
-        function initializeCookieBanner() {
-            let isCookieAccepted = localStorage.getItem("cb_isCookieAccepted");
-            if (isCookieAccepted === null) {
-                localStorage.setItem("cb_isCookieAccepted", "no");
-                showCookieBanner();
-            }
-            if (isCookieAccepted === "no") {
-                showCookieBanner();
-            }
-        }
-
-        // Assigning values to window object
-        window.onload = initializeCookieBanner();
-        window.cb_hideCookieBanner = hideCookieBanner;
-    </script>
-
     <div id="cb-cookie-banner" class="alert alert-dark text-center mb-0" role="alert">
-        &#x1F36A; Este sitio usa para asegurar que obtengas la mejor experiencia.
+        &#x1F36A; Este sitio usa para asegurar que obtengas la mejor experiencia :)
         <a href="https://www.cookiesandyou.com/" target="blank">Leer más</a>
         <button type="button" class="btn btn-primary btn-sm ms-3"
             onclick="window.cb_hideCookieBanner()">Entendido</button>
