--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 
     <!-- Cookies JS -->
-    <script async src="./src/cookie-banner.js"></script>
+    <script async src="cookie-banner.js"></script>
     
     <script>
         var current = 0;
