--- a/index.html
+++ b/index.html
@@ -385,7 +385,9 @@
 
     <!-- Cookie Banner -->
     <div id="cb-cookie-banner" class="alert alert-dark text-center mb-0" role="alert">
-        &#x1F36A; Este sitio usa cookies para asegurar que obtengas la mejor experiencia :)
+        &#x1F36A; Con su acuerdo, nosotros y nuestros socios usamos cookies o tecnologías similares para almacenar, acceder y procesar datos personales como su visita en este sitio web.<br>
+Nosotros y nuestros socios hacemos el siguiente tratamiento de datos:<br>
+Almacenamiento y acceso a la información, Compartir datos y perfiles para análisis y publicidad personalizada de los anunciantes para nuestras campañas publicitarias, Compartir datos y perfiles para análisis y publicidad personalizada de los anunciantes y agencias publicitarias en internet, Datos de localización geográfica precisa e identificación mediante análisis de dispositivos., Publicidad y contenido personalizados, medición de publicidad y contenido, investigación de audiencia y desarrollo de servicios.
         <a href="https://www.cookiesandyou.com/" target="blank">Leer más</a>
         <button type="button" class="btn btn-primary btn-sm ms-3"
             onclick="window.cb_hideCookieBanner()">Entendido</button>
