Revert "Title para los enlaces y implementacion de H1"
This reverts commit de27635477efaf01dcac6f173aea0c61811b335f.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>FiesTop | Donde las fiestas cobran vida</title>
     <meta name="description"
         content="En FiesTop puedes organizar desde una fiesta de cumpleaños hasta una fiesta de VX años el limite es tu imaginacion puesto que aquí encontraras todo lo que necesitas.">
-    <link title="Bootstrap" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -149,7 +149,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html" title="Brand_Index"><img src="img/Fisestoplogo.png" height="40px"
+                <a class="navbar-brand" href="index.html"><img src="img/Fisestoplogo.png" height="40px"
                         alt="Logo oficial de FiesTop" title="Logo oficial de FiesTop"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -159,37 +159,37 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html" title="Index">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" title="Nav">Todos los productos</a>
+                            <a class="nav-link" href="#">Todos los productos</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" title="Toggle" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 Categorias
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#" title="Item 1">Servicios</a></li>
-                                <li><a class="dropdown-item" href="#" title="Item 2"></a></li>
+                                <li><a class="dropdown-item" href="#">Servicios</a></li>
+                                <li><a class="dropdown-item" href="#"></a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" title="Item 3"></a></li>
+                                <li><a class="dropdown-item" href="#"></a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" title="Button drop" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 Quienes somos:
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item">FiesTop es una empresa centrada en la organizacion de eventos sociales <br> de cualquier indole desde fiestas de cumpleaños hasta fiestas de XV años y bodas <br> el limite es su imaginación, nosotros le daremos las herramientas necesarias <br> para que organice su fiesta ideal en tiempo y forma</a></li>
-                                <li><a class="dropdown-item" href="#" title="dropdown"></a></li>
+                                <li><a class="dropdown-item" href="#"></a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" title="dropdown"></a></li>
+                                <li><a class="dropdown-item" href="#"></a></li>
                             </ul>
                         </li>
                     </ul>
@@ -206,13 +206,13 @@
         <img src="img/Banner.png" class="rounded mx-auto d-block" alt="Banner de FiesTop" title="Banner de FiesTop"
             style="height: 500px; ">
     <div id="carrusel">
-        <a href="#" class="left-arrow" title="Flecha izquierda"><img src="img/left-arrow.png" width="20" height="20" title="Flecha Izquierda"
+        <a href="#" class="left-arrow"><img src="img/left-arrow.png" width="20" height="20" title="Flecha Izquierda"
                 alt="Flecha con direccion hacia la izquierda" /></a>
-        <a href="#" class="right-arrow" title="Flecha derecha"><img src="img/right-arrow.png" width="20" height="20" title="Flecha Derecha"
+        <a href="#" class="right-arrow"><img src="img/right-arrow.png" width="20" height="20" title="Flecha Derecha"
                 alt="Flecha con direccion hacia la derecha" /></a>
         <div class="carrusel">
             <div class="product" id="product_0">
-                <a href="product.html" title="Product"> <img src="img/Cubiertos.jpg" width="195" height="160"
+                <a href="product.html"> <img src="img/Cubiertos.jpg" width="195" height="160"
                         title="Cubiertos Plasticos - $558.03" alt="1000 cubiertos variados" /></a>
             </div>
             <div class="product" id="product_1">
@@ -239,11 +239,11 @@
     </div>
     <br><br><br><br><br><br>
     <section class="destacados">
-        <h1>Productos Destacados</h1>
+        <h2>Productos Destacados</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="product.html" title="Product"><img src="img/Cubiertos.jpg" class="card-img-top" title="Cubiertos Plasticos"
+                    <a href="product.html"><img src="img/Cubiertos.jpg" class="card-img-top" title="Cubiertos Plasticos"
                             alt="1000 cubiertos variados"></a>
                     <div class="card-body">
                         <h5 class="card-title">1.000 cubiertos desechables de plástico, paquete variado</h5>
@@ -251,26 +251,26 @@
                         <p class="card-text">Los cubiertos de plástico blanco a granel de 1000 piezas incluyen 334,
                             tenedores,
                             333 cuchillos, 333 cucharas de sopa...</p>
-                        <a href="product.html" title="Comprar" class="btn btn-primary">Comprar</a>
+                        <a href="product.html" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="#" title="Niña"><img src="img/FiestaNiña.jpeg" class="card-img-top"
+                    <a href="#"><img src="img/FiestaNiña.jpeg" class="card-img-top"
                             alt="Sombreros de papel de unicornio" title="Sombreros de papel de unicornio"></a>
                     <div class="card-body">
                         <h5 class="card-title">6 Piezas, Sombrero De Papel De Unicornio Arcoíris</h5>
                         <h3 class="card-title">$49.99</h3>
                         <p class="card-text">6 Piezas, Sombrero De Papel De Unicornio Arcoíris,
                             Suministros De Fiesta De Cumpleaños Para Niña Y Niño...</p>
-                        <a href="#" class="btn btn-primary" title="Comprar">Comprar</a>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="#" title="Corona"><img src="img/CoronaC.jpeg" class="card-img-top" title="Corona de papel"
+                    <a href="#"><img src="img/CoronaC.jpeg" class="card-img-top" title="Corona de papel"
                             alt="Corona de papel con decoración de pastel de cunpleaños"></a>
                     <div class="card-body">
                         <h5 class="card-title">15 Piezas, Coronas De Feliz Cumpleaños</h5>
@@ -278,25 +278,25 @@
                         <p class="card-text">15 Piezas, Coronas De Feliz Cumpleaños,
                             Coronas De Sombrero De Cumpleaños De Papel Para Regalos De Cumpleaños
                             En El Aula, Fiestas, Sombreros...</p>
-                        <a href="#" class="btn btn-primary" title="Comprar">Comprar</a>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="#" title="Hacienda"><img src="img/HaciendaReal.jpg" class="card-img-top"
+                    <a href="#"><img src="img/HaciendaReal.jpg" class="card-img-top"
                             alt="Salón de eventos Real de Haciendas" title="Salón de eventos Real de Haciendas"></a>
                     <div class="card-body">
                         <h5 class="card-title">Salón Real de Haciendas</h5>
                         <h3 class="card-title">$10,000</h3>
                         <p class="card-text">El salón perfecto para todo tipo de eventos...</p>
-                        <a href="#" class="btn btn-primary" title="Comprar">Comprar</a>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="#" title="CasaV"><img src="img/CasaV.jpeg" class="card-img-top" alt="Salón Casa Victoria"
+                    <a href="#"><img src="img/CasaV.jpeg" class="card-img-top" alt="Salón Casa Victoria"
                             title="Salón Casa Victoria"></a>
                     <div class="card-body">
                         <h5 class="card-title">Casa Victoria</h5>
@@ -304,25 +304,25 @@
                         <p class="card-text">15 Piezas, Coronas De Feliz Cumpleaños, Coronas De Sombrero De Cumpleaños
                             De Papel Para Regalos De Cumpleaños En El Aula, Fiestas, Sombreros, Suministros Diarios Para
                             Fiestas...</p>
-                        <a href="#" class="btn btn-primary" title="Comprar">Comprar</a>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="#" title="Boom"><img src="img/SonidoB.jpeg" class="card-img-top" alt="Evento con sonido y luces Boom"
+                    <a href="#"><img src="img/SonidoB.jpeg" class="card-img-top" alt="Evento con sonido y luces Boom"
                             title="Evento con sonido y luces Boom"></a>
                     <div class="card-body">
                         <h5 class="card-title">Sonido Boom</h5>
                         <h3 class="card-title">$15,000</h3>
                         <p class="card-text">Luz, Sonido, todo lo esencial para que tu fiesta este en ambiente...</p>
-                        <a href="#" class="btn btn-primary" title="Comprar">Comprar</a>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="#" title="Elements"><img src="img/ElementsAGS.jpg" class="card-img-top"
+                    <a href="#"><img src="img/ElementsAGS.jpg" class="card-img-top"
                             alt="Excelente ambiente para los eventos" title="Excelente ambiente"></a>
                     <div class="card-body">
                         <h5 class="card-title">Elements</h5>
@@ -330,26 +330,26 @@
                         <p class="card-text">CONÓCENOS
                             Somos una empresa hidrocálida con más de una década dedicada a la producción de eventos
                             corporativos y sociales, generamos un excelente ambiente, divertido y animado...</p>
-                        <a href="#" class="btn btn-primary" title="Comprar">Comprar</a>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="#" title="4choc"><img src="https://www.elglobo.com.mx/cdn/shop/products/49523-1_600x.jpg?v=1618602727"
+                    <a href="#"><img src="https://www.elglobo.com.mx/cdn/shop/products/49523-1_600x.jpg?v=1618602727"
                             class="card-img-top" alt="Paste 4 chocolates" title="Pastel de 4 chocolates"></a>
                     <div class="card-body">
                         <h5 class="card-title">4 Chocolates Individual</h5>
                         <h3 class="card-title">$49.00</h3>
                         <p class="card-text">Pan de chocolate tipo brownie relleno de mousse de chocolate amargo,
                             chocolate de leche y chocolate blanco. Decorado con glasé blanco y obscuro...</p>
-                        <a href="#" class="btn btn-primary" title="Comprar">Comprar</a>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="#" title="Rosca"><img src="https://www.elglobo.com.mx/cdn/shop/products/27543-1_600x.jpg?v=1618602845"
+                    <a href="#"><img src="https://www.elglobo.com.mx/cdn/shop/products/27543-1_600x.jpg?v=1618602845"
                             class="card-img-top" alt="Pastel en forma de roca de chocolate"
                             title="Pastel rosca de chocolate"></a>
                     <div class="card-body">
@@ -358,20 +358,20 @@
                         <p class="card-text">Pastel en forma de rosca elaborado con helado sabor a chocolate con
                             almendra y relleno de variegato noisette. Decorado con rocio y glasé de chocolate, montado
                             sobre un bizcocho sabor chocolate embebido en jarabe marrasquino...</p>
-                        <a href="#" class="btn btn-primary" title="Comprar">Comprar</a>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card border-light mb-3">
-                    <a href="#" title="Biscocho"><img src="https://www.elglobo.com.mx/cdn/shop/products/41153-1_600x.jpg?v=1618602873"
+                    <a href="#"><img src="https://www.elglobo.com.mx/cdn/shop/products/41153-1_600x.jpg?v=1618602873"
                             class="card-img-top" alt="Variedad de biscochos" title="Biscochos miniatura"></a>
                     <div class="card-body">
                         <h5 class="card-title">Biscocho Miniatura</h5>
                         <h3 class="card-title">$198.00</h3>
                         <p class="card-text">Charola con deliciosa mezcla de panqués y garibaldis tamaño miniatura...
                         </p>
-                        <a href="#" class="btn btn-primary" title="Comprar">Comprar</a>
+                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
@@ -388,7 +388,7 @@
         &#x1F36A; Con su acuerdo, nosotros y nuestros socios usamos cookies o tecnologías similares para almacenar, acceder y procesar datos personales como su visita en este sitio web.<br>
 Nosotros y nuestros socios hacemos el siguiente tratamiento de datos:<br>
 Almacenamiento y acceso a la información, Compartir datos y perfiles para análisis y publicidad personalizada de los anunciantes para nuestras campañas publicitarias, Compartir datos y perfiles para análisis y publicidad personalizada de los anunciantes y agencias publicitarias en internet, Datos de localización geográfica precisa e identificación mediante análisis de dispositivos., Publicidad y contenido personalizados, medición de publicidad y contenido, investigación de audiencia y desarrollo de servicios.
-        <a href="https://www.cookiesandyou.com/" title="Cookies" target="blank">Leer más</a>
+        <a href="https://www.cookiesandyou.com/" target="blank">Leer más</a>
         <button type="button" class="btn btn-primary btn-sm ms-3"
             onclick="window.cb_hideCookieBanner()">Entendido</button>
     </div>
@@ -396,7 +396,7 @@ Almacenamiento y acceso a la información, Compartir datos y perfiles para anál
 
     <footer>
         <p style="text-align: center;">&copy; 2023 Mi Tienda en Línea <a
-                href="https://www.facebook.com/people/FiesTop/100092594490737/" title="Facebook"><img src="img/fb.png"
+                href="https://www.facebook.com/people/FiesTop/100092594490737/"><img src="img/fb.png"
                     class="card-img-top" alt="Plataforma oficial de fiestop en facebook" title="logo de Facebook"
                     style="width: 30px;"></a> </p>
 
